package gameModel;

import java.util.ArrayList;

public class GameManager {
    private ArrayList<IPlayer> players;
    Turn turn;
}
