package gameModel;

public class Turn {
}
