package gameModel.board;

import gameModel.pieces.IPiece;
import gameModel.tiles.ITile;

public class Board2DHex extends Board {
    public void insertPiece(IPiece piece){}
    public void setUpTiles(){}
    public void addTile(ITile tile){}
}
