package gameModel.pieces;

public class Archer extends Human {
    public void basicAttack(){}
    public void rangedAttack(){}
}
