package gameModel.pieces;

public abstract class Human extends Piece implements IPiece {
    public abstract void basicAttack();
}
