package gameModel.pieces;

public interface IPiece {
    public void move(int direction);
}
