package gameModel.pieces;

public class Minotaur extends Monster {
    public void basicAttack(){}
    public void summonBulls(){}
}
