package gameModel.pieces;

public abstract class Monster extends Piece implements IAttackingPiece {
    public abstract void basicAttack();
}
