package gameModel.pieces;

public class Priest extends Human {
    public void basicAttack(){}
    public void heal(){}
}
