package gameModel.pieces;

public class Warrior extends Human {
    public void basicAttack(){}
    public void bash(){}
}
