package gameModel.tiles;

public interface ITile {
}
