package gameModel.tiles;

public abstract class Tile implements ITile {
}
