package boardgame.view;

public class BoardView {
}
